tests/fixtures/invalid/bytes_floordiv_float.py
# Cannot floor divide Bytes and Float
x: float = b"hello" // 1.0
